Custom encoder for WS2812 color and low voltage time

--- a/components/ws2812b/CMakeLists.txt
+++ b/components/ws2812b/CMakeLists.txt
@@ -1,3 +1,5 @@
-idf_component_register(SRCS "ws2812b.c"
-                    INCLUDE_DIRS "include"
-                    PRIV_REQUIRES driver)
+idf_component_register(
+        SRCS "ws2812b.c" "ws2812_encoder.c"
+        INCLUDE_DIRS "include"
+        PRIV_INCLUDE_DIRS "."
+        REQUIRES "driver")
