Moved driver to private requirements

--- a/components/ws2812b/CMakeLists.txt
+++ b/components/ws2812b/CMakeLists.txt
@@ -2,4 +2,4 @@ idf_component_register(
         SRCS "ws2812b.c" "ws2812_encoder.c"
         INCLUDE_DIRS "include"
         PRIV_INCLUDE_DIRS "."
-        REQUIRES "driver")
+        PRIV_REQUIRES "driver")
